contrib/pkgbuild: Fix dependencies
We actually only depend on notmuch-runtime, not notmuch. The notmuch
package is the Python/Ruby bindings and an Emacs MUA.

Signed-off-by: Alex Minghella <a@minghella.net>

--- a/contrib/pkgbuild/PKGBUILD
+++ b/contrib/pkgbuild/PKGBUILD
@@ -5,7 +5,7 @@ pkgrel=1
 pkgdesc="Synchronise a local maildir store with a remote"
 arch=('any')
 license=('custom:0BSD')
-depends=('isync' 'notmuch')
+depends=('isync' 'notmuch-runtime')
 makedepends=('asciidoctor' 'lzip' 'make')
 options=('zipman')
 source=("https://git.minghella.net/pub/scm/${pkgname}.git/snapshot/${pkgname}-${pkgver}.tar.lz")
